--- a/demo/index.html
+++ b/demo/index.html
@@ -12,8 +12,10 @@
 	<div class="pagecontent">
 		<h1>demila</h1>
 		<p>demilaMedia是一款基于jquery的跨平台预览插件</p>
+		<div class="links">
 		<a class="idxlink" href="demo_nocmd.html" title="无CMD规范">无CMD规范</a>
 		<a class="idxlink" href="demo_cmd.html" title="遵循CMD规范">遵循CMD规范</a>
+		</div>
 	</div>
 </div>
 </body>
